# Elian-Factory

./: CMakeLists.txt  README.md  README_en.md  build.bat  g_down.md  llm_trainer_server.cpp  node_down.md  requirements.txt
llm/: combin_weight.py  inference.py  main.py
llm/configs/: default_config.json
llm/data/: sample.jsonl  shuangseqiu_test.jsonl  train_elian.jsonl
llm/models/: transformers_model.py
llm/mydataloader/: __init__.py  loader_transformers.py
web/: index.html
web-vue/: .eslintrc.js  jsconfig.json  package-lock.json  package.json  vue.config.js
web-vue/public/: index.html
web-vue/public/img/: README.txt
web-vue/src/: App.vue  main.js
web-vue/src/assets/: styles.css
web-vue/src/components/: DataManagementView.vue  ElianFactoryIntroView.vue  GpuCard.vue  InferenceView.vue  OllamaDeployView.vue  SideBar.vue  SystemSettingsView.vue  TrainingView.vue
web/css/: app.1533785c.css  app.c39453f9.css  app.fa2f55be.css
web/js/: app.10ec9ffb.js  app.6c9f23fb.js  app.9408ded2.js  chunk-vendors.ade8e306.js  chunk-vendors.e82b9922.js
